<?xml version="1.0"?>
<package format="2">
  <name>multi_robots</name>
  <version>1.0.0</version>
  <description>
    This package is a multi_robots metapackages
  </description>
  <maintainer email="zhaoguangbao_8421@163.com">zhaoguangbao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>multi_ur</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_gazebo</exec_depend>
  <exec_depend>ur_teleop</exec_depend>

  <export>
   <metapackage />
  </export>
</package>
